# pyfastgrep

./: .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup-hooks.sh  test.py
.githooks/: pre-push
.github/workflows/: ci.yml  publish.yml  python-checks.yml  release.yml  security-audit.yml
cli/src/: main.rs
crates/core/src/: ast.rs  ast_search.rs  context_search.rs  lib.rs  regex_search.rs  regex_stream.rs  utils.rs
pyfastgrep/: __init__.py
python/pyfastgrep/: __init__.py
scripts/: pre-push
src/: ast_bindings.rs  common.rs  context_bindings.rs  lib.rs  regex_bindings.rs  utils.rs
tests/: mandatory_tests.py
